# data-validation-framework

./: .auto-changelog  .auto-changelog-template.hbs  .codespellrc  .copier-answers.yml  .coveragerc  .gitignore  .gitlab-ci.yml  .gitreview  .pre-commit-config.yaml  .pylintrc  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  README.rst  commitlint.config.js  package.json  pyproject.toml  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  how_to_use.yaml
.github/workflows/: codeql.yml  publish-sdist.yml  run-tox.yml
data_validation_framework/: __init__.py  report.py  result.py  rst_tools.py  target.py  task.py  util.py  version.py
doc/: Makefile
doc/source/: api.rst  conf.py  index.rst
docs/: Makefile
docs/source/: api_ref.rst  conf.py
tests/: __init__.py  conftest.py  test_result.py  test_rst_tools.py  test_target.py  test_task.py  test_util.py  test_version.py
